made some alignment fixes

--- a/styles/custom-css/employer-dash-support.css
+++ b/styles/custom-css/employer-dash-support.css
@@ -21,7 +21,7 @@ body {
 h3 {
   font-weight: 500;
   font-size: 32px;
-  margin-left: 250px;
+  margin-left:300px;
 }
 .sidebar-margin {
   margin-left: 190px !important;
@@ -98,7 +98,8 @@ button {
     margin: 0;
   }
   h3 {
-    margin: 0;
+    text-align: center;
+    margin:0;
   }
   #section-a {
     margin-left: 0;
